// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainExplorerPage component Check error response for getPicker query 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Memo()
    domains={
      Array [
        "Travels",
        "VisaApplications",
      ]
    }
    history={Object {}}
    loadingState={false}
    location={
      Object {
        "pathname": "/DomainExplorer/Travels",
        "state": Object {
          "parameters": Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ],
        },
      }
    }
    match={
      Object {
        "params": Object {
          "domainName": "Travels",
        },
      }
    }
  />
</Router>
`;

exports[`DomainExplorerPage component Check error response for getQueryFields query 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Breadcrumb>
        <MockedBreadcrumb />
      </Breadcrumb>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <MockedDomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                  "serviceUrl",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
         
      </MockedDomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component Check error response for getQueryTypes 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Memo()
    domains={
      Array [
        "Travels",
        "VisaApplications",
      ]
    }
    history={Object {}}
    loadingState={false}
    location={
      Object {
        "pathname": "/DomainExplorer/Travels",
        "state": Object {
          "parameters": Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ],
        },
      }
    }
    match={
      Object {
        "params": Object {
          "domainName": "Travels",
        },
      }
    }
  />
</Router>
`;

exports[`DomainExplorerPage component Mock query testing 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Breadcrumb>
        <MockedBreadcrumb />
      </Breadcrumb>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <MockedDomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                  "serviceUrl",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
         
      </MockedDomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component Snapshot with default props 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Breadcrumb>
        <MockedBreadcrumb />
      </Breadcrumb>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <MockedDomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                  "serviceUrl",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
         
      </MockedDomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component check assertions on rememberedParams 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {},
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Breadcrumb>
        <MockedBreadcrumb />
      </Breadcrumb>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <MockedDomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                  "serviceUrl",
                ],
              },
            ],
          }
        }
        rememberedParams={Array []}
        rememberedSelections={Array []}
      >
         
      </MockedDomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;
